--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -325,7 +325,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:weightSum="10">
+                            android:weightSum="10"
+                            android:layout_marginBottom="10dp">
 
                             <TextView
                                 android:layout_width="0dp"
@@ -351,35 +352,60 @@
                             android:id="@+id/order_action"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:weightSum="2">
-                            <Button
-                                android:id="@+id/order_approve"
-                                android:layout_width="0dp"
+                            android:orientation="vertical">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="50dp"
+                                android:orientation="horizontal"
+                                android:gravity="end">
+                                <Button
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Recent Payments  "
+                                    android:drawableEnd="@drawable/eye"
+                                    android:onClick="@{()->activity.onClickViewPayments()}"
+                                    android:textColor="@color/white"
+                                    android:textStyle="bold"
+                                    android:paddingTop="10dp"
+                                    android:paddingBottom="10dp"
+                                    android:backgroundTint="@android:color/holo_green_dark" />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Approve"
-                                android:textColor="@color/white"
-                                android:textStyle="bold"
-                                android:textSize="@dimen/text_size_1"
-                                android:layout_margin="10dp"
-                                android:paddingTop="10dp"
-                                android:paddingBottom="10dp"
-                                android:backgroundTint="@android:color/holo_green_dark"
-                                android:layout_weight="1"/>
-                            <Button
-                                android:id="@+id/order_cancel"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:text="Cancel"
-                                android:textColor="@color/white"
-                                android:textStyle="bold"
-                                android:paddingTop="10dp"
-                                android:paddingBottom="10dp"
-                                android:textSize="@dimen/text_size_1"
-                                android:layout_margin="10dp"
-                                android:backgroundTint="@android:color/holo_red_light"
-                                android:layout_weight="1"/>
+                                android:orientation="horizontal"
+                                android:weightSum="2">
+                                <Button
+                                    android:id="@+id/order_approve"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:text="Approve"
+                                    android:onClick="@{()->activity.onClickApprove()}"
+                                    android:textColor="@color/white"
+                                    android:textStyle="bold"
+                                    android:textSize="@dimen/text_size_1"
+                                    android:layout_margin="10dp"
+                                    android:paddingTop="10dp"
+                                    android:paddingBottom="10dp"
+                                    android:backgroundTint="@android:color/holo_green_dark"
+                                    android:layout_weight="1"/>
+                                <Button
+                                    android:id="@+id/order_cancel"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:text="Cancel"
+                                    android:onClick="@{()->activity.onClickCancel()}"
+                                    android:textColor="@color/white"
+                                    android:textStyle="bold"
+                                    android:paddingTop="10dp"
+                                    android:paddingBottom="10dp"
+                                    android:textSize="@dimen/text_size_1"
+                                    android:layout_margin="10dp"
+                                    android:backgroundTint="@android:color/holo_red_light"
+                                    android:layout_weight="1"/>
+                            </LinearLayout>
                         </LinearLayout>
+
 
                     </LinearLayout>
 
