- Order Item Selection with Quantity in Progress

--- a/app/src/main/res/layout/activity_delivery_detail.xml
+++ b/app/src/main/res/layout/activity_delivery_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="activity"
@@ -8,7 +8,6 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.activity.delivery.DeliveryDetailActivity">
@@ -33,13 +32,43 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/filterBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:onClick="@{()->activity.showReportView()}"
+                android:background="@drawable/light_grey_background"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/filterIcon"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/eye"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:paddingTop="20dp"
+            android:paddingTop="10dp"
             android:paddingBottom="20dp"
             android:nestedScrollingEnabled="true"
             app:layout_constraintBottom_toTopOf="@id/back_btn_layout"
@@ -164,6 +193,7 @@
                         android:layout_height="wrap_content"
                         android:clickable="true"
                         android:focusable="false"
+                        android:inputType="textNoSuggestions"
                         android:textColor="@color/font_color_main"
                         android:textSize="@dimen/text_size_1"
                         tools:ignore="KeyboardInaccessibleWidget" />
@@ -183,6 +213,7 @@
                         android:layout_height="wrap_content"
                         android:clickable="true"
                         android:focusable="false"
+                        android:inputType="textNoSuggestions"
                         android:textColor="@color/font_color_main"
                         android:textSize="@dimen/text_size_1"
                         tools:ignore="KeyboardInaccessibleWidget" />
@@ -202,6 +233,7 @@
                         android:layout_height="wrap_content"
                         android:clickable="true"
                         android:focusable="false"
+                        android:inputType="textNoSuggestions"
                         android:textColor="@color/font_color_main"
                         android:textSize="@dimen/text_size_1"
                         tools:ignore="KeyboardInaccessibleWidget" />
