--- a/app/src/main/res/layout/listitem_order_sku.xml
+++ b/app/src/main/res/layout/listitem_order_sku.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -38,58 +39,71 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:paddingTop="10sp"
             android:paddingBottom="10sp"
             android:paddingStart="1sp"
             android:paddingEnd="10sp"
-            android:layout_weight="9">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="10"
-                android:visibility="gone">
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/font_color_main"
-                    android:textSize="@dimen/text_size_1"
-                    android:text="Code:"
-                    android:textStyle="bold"
-                    android:layout_weight="3"/>
-                <TextView
-                    android:layout_width="0dp"
-                    android:text="@{vm.itemCode}"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/font_color_main"
-                    android:textSize="@dimen/text_size_1"
-                    android:layout_weight="7"/>
-            </LinearLayout>
+            android:layout_weight="9"
+            android:gravity="center_vertical">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="10">
+                android:layout_height="wrap_content">
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/font_color_main"
-                    android:textSize="@dimen/text_size_1"
-                    android:text="Item:"
-                    android:textStyle="bold"
-                    android:layout_weight="3"
-                    android:visibility="gone"/>
-                <TextView
-                    android:layout_width="0dp"
-                    android:text="@{vm.itemDescription}"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/font_color_main"
-                    android:textSize="@dimen/text_size_1"
+                    android:layout_marginEnd="16dp"
                     android:hint="Marks FCMP 500gm"
-                    android:layout_weight="10"/>
-            </LinearLayout>
+                    android:text="@{vm.itemDescription}"
+                    android:textColor="@color/font_color_main"
+                    android:textSize="@dimen/text_size_1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <EditText
+                        android:id="@+id/quantity"
+                        android:layout_width="60dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/white_background"
+                        android:inputType="number"
+                        android:paddingStart="5dp"
+                        android:paddingTop="10dp"
+                        android:paddingEnd="5dp"
+                        android:paddingBottom="10dp"
+                        android:textAlignment="center"
+                        android:textColor="@color/font_color_main"
+                        android:textStyle="italic" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="CTN"
+                        android:padding="5dp"
+                        android:text="@{vm.primaryUom}"
+                        android:textAlignment="center"
+                        android:textColor="@color/font_color_main"
+                        android:textStyle="italic" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
         </LinearLayout>
     </LinearLayout>
 
