--- a/app/src/main/res/drawable/deep_green_background.xml
+++ b/app/src/main/res/drawable/deep_green_background.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#6dbd8b" />
     <corners android:radius="15dp"/>
+    <stroke android:width="1dp"/>
 </shape>
