--- a/app/src/main/res/layout/activity_delivery_detail.xml
+++ b/app/src/main/res/layout/activity_delivery_detail.xml
@@ -117,12 +117,34 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/font_color_main"
                             android:textSize="@dimen/text_size_1"
-                            android:text="Date:"
+                            android:text="Loading Date:"
                             android:textStyle="bold"
                             android:layout_weight="4"/>
                         <TextView
                             android:layout_width="0dp"
                             android:text="@{activity.moveConfirmedHeaderDto.moveConfirmedDate}"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/font_color_main"
+                            android:textSize="@dimen/text_size_1"
+                            android:layout_weight="6"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="10">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/font_color_main"
+                            android:textSize="@dimen/text_size_1"
+                            android:text="Gate-Out Date:"
+                            android:textStyle="bold"
+                            android:layout_weight="4"/>
+                        <TextView
+                            android:layout_width="0dp"
+                            android:text="--"
                             android:layout_height="wrap_content"
                             android:textColor="@color/font_color_main"
                             android:textSize="@dimen/text_size_1"
