--- a/app/src/main/res/layout/listitem_delivery.xml
+++ b/app/src/main/res/layout/listitem_delivery.xml
@@ -46,27 +46,6 @@
             android:paddingStart="1sp"
             android:paddingEnd="10sp"
             android:layout_weight="9">
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:weightSum="10">-->
-<!--                <TextView-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textColor="@color/font_color_main"-->
-<!--                    android:textSize="@dimen/text_size_1"-->
-<!--                    android:text="Move Order:"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:layout_weight="4"/>-->
-<!--                <TextView-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:text="@{vm.movOrderNo}"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textColor="@color/font_color_main"-->
-<!--                    android:textSize="@dimen/text_size_1"-->
-<!--                    android:layout_weight="6"/>-->
-<!--            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -152,6 +131,28 @@
                 <TextView
                     android:layout_width="0dp"
                     android:text="@{vm.driverName+` `+vm.driverMobile}"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/font_color_main"
+                    android:textSize="@dimen/text_size_1"
+                    android:layout_weight="6"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="10">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/font_color_main"
+                    android:textSize="@dimen/text_size_1"
+                    android:text="Move No:"
+                    android:textStyle="bold"
+                    android:layout_weight="4"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:text="@{vm.movOrderNo}"
                     android:layout_height="wrap_content"
                     android:textColor="@color/font_color_main"
                     android:textSize="@dimen/text_size_1"
