--- a/app/src/main/res/layout/dialog_payment_detail.xml
+++ b/app/src/main/res/layout/dialog_payment_detail.xml
@@ -117,13 +117,39 @@
 
                     </LinearLayout>
 
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
+                        android:text="@{vm.paymentDto.currentStatus}"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1"
+                        android:hint="data"/>
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="10">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="7"
-                        android:text="@{vm.paymentDto.currentStatus}"
+                        android:layout_weight="4"
+                        android:text="Submit Date:"
+                        android:textStyle="bold"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1"
+                        android:hint="data"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
+                        android:text="@{vm.paymentDto.creationTime}"
                         android:textColor="@color/font_color_main"
                         android:textSize="@dimen/text_size_1"
                         android:hint="data"/>
@@ -201,7 +227,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/attachment" />
-
 
             </LinearLayout>
         </ScrollView>
